cmake_minimum_required(VERSION 3.4)
project(hello_world)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CURRENT_SOURCE_DIR /home/vitaliy/test)
add_executable(hello_world ${CMAKE_CURRENT_SOURCE_DIR}/hello_world_application/hello_world.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/formatter_lib)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex_lib)
find_library(formatter_ex libformatter_ex.a ${CMAKE_CURRENT_SOURCE_DIR}/formatter_ex_lib)
find_library(formattter libformatter.a ${CMAKE_CURRENT_SOURCE_DIR}/formatter_lib)
target_link_libraries(hello_world ${formatter_ex} ${formatter})
